[gd_scene load_steps=35 format=4 uid="uid://b3e11rxsdkbmi"]

[ext_resource type="Script" uid="uid://d0qpvqj4pk71a" path="res://scenes/levels/level.gd" id="1_d4w6o"]
[ext_resource type="PackedScene" uid="uid://b5snworusylr7" path="res://scenes/hud/game_hud.tscn" id="2_mbbpy"]
[ext_resource type="Script" uid="uid://gt0ir31uw7h1" path="res://scenes/levels/level_camera.gd" id="3_7pb6i"]
[ext_resource type="Texture2D" uid="uid://dwawlnhyh5vj6" path="res://sprites/terrain.png" id="3_ouxo3"]
[ext_resource type="Script" uid="uid://doiawk6t1lsou" path="res://scenes/terrain/tile_map.gd" id="4_icy5c"]
[ext_resource type="PackedScene" uid="uid://cdpkbccuhdbcp" path="res://scenes/players/player.tscn" id="5_rmjfq"]
[ext_resource type="PackedScene" uid="uid://x1i7ns0fsmjb" path="res://scenes/powerup/power_up.tscn" id="6_7pb6i"]
[ext_resource type="PackedScene" uid="uid://co0ygwi05urpg" path="res://scenes/players/player_base.tscn" id="6_ouxo3"]
[ext_resource type="Texture2D" uid="uid://bn6c6vaxia4l8" path="res://sprites/game_over.png" id="8_ouxo3"]
[ext_resource type="PackedScene" uid="uid://djabaayggu771" path="res://scenes/levels/pause.tscn" id="9_icy5c"]
[ext_resource type="PackedScene" uid="uid://bp2r8x5mqayf3" path="res://scenes/hud/results_screen.tscn" id="10_rmjfq"]

[sub_resource type="TileMapPattern" id="TileMapPattern_mbbpy"]
tile_data = PackedInt32Array(0, 1, 0, 65536, 1, 0, 1, 1, 0, 65537, 1, 0)

[sub_resource type="TileMapPattern" id="TileMapPattern_ouxo3"]
tile_data = PackedInt32Array(0, 1, 1, 65536, 1, 1, 1, 1, 1, 65537, 1, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_icy5c"]
tile_data = PackedInt32Array(0, 131073, 2, 65536, 131073, 2, 1, 131073, 2, 65537, 131073, 2)

[sub_resource type="TileMapPattern" id="TileMapPattern_rmjfq"]
tile_data = PackedInt32Array(0, 262145, 2, 65536, 262145, 2, 1, 262145, 2, 65537, 262145, 2)

[sub_resource type="TileMapPattern" id="TileMapPattern_7pb6i"]
tile_data = PackedInt32Array(0, 131073, 1, 65536, 131073, 1, 1, 131073, 1, 65537, 131073, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_xfk5q"]
tile_data = PackedInt32Array(0, 1, 2, 65536, 1, 2, 1, 1, 2, 65537, 1, 2)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nsrm0"]
texture = ExtResource("3_ouxo3")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:0/0/custom_data_0 = "brick_full"
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -4, 4, -4, 4, 4, 0, 4)
1:0/0/custom_data_0 = "brick_right"
2:1/0 = 0
2:1/0/custom_data_0 = "ice"
4:2/0 = 0
4:2/0/z_index = 10
4:2/0/custom_data_0 = "grass"
4:1/0 = 0
4:1/0/physics_layer_3/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:1/0/custom_data_0 = "wall"
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 0, -4, 0, 4, -4, 4)
3:0/0/custom_data_0 = "brick_left"
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 0, 4, 0, 4, 4, -4, 4)
2:0/0/custom_data_0 = "brick_bottom"
0:1/0 = 0
0:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:1/0/custom_data_0 = "metal"
1:1/0 = 0
1:1/0/physics_layer_2/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:1/0/custom_data_0 = "frozen"
2:2/animation_columns = 2
2:2/animation_frame_0/duration = 1.0
2:2/animation_frame_1/duration = 1.0
2:2/0 = 0
2:2/0/z_index = 10
2:2/0/custom_data_0 = "grass"
0:2/animation_columns = 2
0:2/animation_speed = 2.0
0:2/animation_frame_0/duration = 1.0
0:2/animation_frame_1/duration = 1.0
0:2/0 = 0
0:2/0/physics_layer_2/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:2/0/custom_data_0 = "water"
3:1/0 = 0
3:1/0/physics_layer_3/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:1/0/custom_data_0 = "wall"
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 0, -4, 0)
4:0/0/custom_data_0 = "brick_top"

[sub_resource type="TileSet" id="TileSet_x42e6"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 56
physics_layer_1/collision_layer = 2
physics_layer_1/collision_mask = 56
physics_layer_2/collision_layer = 4
physics_layer_2/collision_mask = 24
physics_layer_3/collision_layer = 64
physics_layer_3/collision_mask = 56
custom_data_layer_0/name = "Type"
custom_data_layer_0/type = 4
sources/1 = SubResource("TileSetAtlasSource_nsrm0")
pattern_0 = SubResource("TileMapPattern_mbbpy")
pattern_1 = SubResource("TileMapPattern_ouxo3")
pattern_2 = SubResource("TileMapPattern_icy5c")
pattern_3 = SubResource("TileMapPattern_rmjfq")
pattern_4 = SubResource("TileMapPattern_7pb6i")
pattern_5 = SubResource("TileMapPattern_xfk5q")

[sub_resource type="Animation" id="Animation_icy5c"]
length = 0.5
step = 0.1

[sub_resource type="Animation" id="Animation_ouxo3"]
resource_name = "game_over"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(168, 256), Vector2(168, 120)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rmjfq"]
_data = {
&"RESET": SubResource("Animation_icy5c"),
&"game_over": SubResource("Animation_ouxo3")
}

[sub_resource type="Animation" id="Animation_xfk5q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverP1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(136, 256)]
}

[sub_resource type="Animation" id="Animation_7pb6i"]
resource_name = "game_over"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverP1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(136, 256), Vector2(136, 216)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qogh7"]
_data = {
&"RESET": SubResource("Animation_xfk5q"),
&"game_over": SubResource("Animation_7pb6i")
}

[sub_resource type="Animation" id="Animation_mq31s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverP2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(200, 256)]
}

[sub_resource type="Animation" id="Animation_8iyoh"]
resource_name = "game_over"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverP2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(200, 256), Vector2(200, 216)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5mi6g"]
_data = {
&"RESET": SubResource("Animation_mq31s"),
&"game_over": SubResource("Animation_8iyoh")
}

[sub_resource type="Animation" id="Animation_qhnmj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverP3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(104, 256)]
}

[sub_resource type="Animation" id="Animation_b8j7q"]
resource_name = "game_over"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverP3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(104, 256), Vector2(104, 216)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jyre1"]
_data = {
&"RESET": SubResource("Animation_qhnmj"),
&"game_over": SubResource("Animation_b8j7q")
}

[sub_resource type="Animation" id="Animation_4ab0e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverP4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(232, 256)]
}

[sub_resource type="Animation" id="Animation_lp2ca"]
resource_name = "game_over"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverP4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(232, 256), Vector2(232, 216)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p62il"]
_data = {
&"RESET": SubResource("Animation_4ab0e"),
&"game_over": SubResource("Animation_lp2ca")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_d4w6o")

[node name="interface_bg" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 352.0
offset_bottom = 272.0
color = Color(0.38431373, 0.38431373, 0.3882353, 1)

[node name="Game Hud" parent="." instance=ExtResource("2_mbbpy")]

[node name="game_bg" type="ColorRect" parent="."]
offset_left = 64.0
offset_top = 24.0
offset_right = 272.0
offset_bottom = 232.0
color = Color(0, 0, 0, 1)

[node name="LevelCamera" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("3_7pb6i")

[node name="Terrain" type="TileMapLayer" parent="." groups=["Terrain"]]
position = Vector2(0, 8)
tile_set = SubResource("TileSet_x42e6")
script = ExtResource("4_icy5c")

[node name="Barrier" type="TileMapLayer" parent="." groups=["Terrain"]]
position = Vector2(0, 8)
tile_map_data = PackedByteArray("AAAIABwAAQAEAAEAAAAUABwAAQAEAAEAAAAXABwAAQAEAAEAAAAiAAMAAQAEAAEAAGAiABIAAQAEAAEAAGAiABMAAQAEAAEAAGAHAAIAAQAEAAEAAFAHAAMAAQAEAAEAAFAHAAQAAQAEAAEAAFAHAAUAAQAEAAEAAFAHAAYAAQAEAAEAAFAHAAcAAQAEAAEAAFAHAAgAAQAEAAEAAFAHAAkAAQAEAAEAAFAHAAoAAQAEAAEAAFAHAAsAAQAEAAEAAFAHAAwAAQAEAAEAAFAHAA0AAQAEAAEAAFAHAA4AAQAEAAEAAFAHAA8AAQAEAAEAAFAHABAAAQAEAAEAAFAHABEAAQAEAAEAAFAHABIAAQAEAAEAAFAHABMAAQAEAAEAAFAHABQAAQAEAAEAAFAHABUAAQAEAAEAAFAHABYAAQAEAAEAAFAHABcAAQAEAAEAAFAHABgAAQAEAAEAAFAHABkAAQAEAAEAAFAHABoAAQAEAAEAAFAHABsAAQAEAAEAAFAHABwAAQADAAEAAGAJABwAAQAEAAEAAAAKABwAAQAEAAEAAAALABwAAQAEAAEAAAAMABwAAQAEAAEAAAANABwAAQAEAAEAAAAOABwAAQAEAAEAAAAPABwAAQAEAAEAAAAQABwAAQAEAAEAAAARABwAAQAEAAEAAAASABwAAQAEAAEAAAATABwAAQAEAAEAAAAVABwAAQAEAAEAAAAWABwAAQAEAAEAAAAYABwAAQAEAAEAAAAZABwAAQAEAAEAAAAaABwAAQAEAAEAAAAbABwAAQAEAAEAAAAcABwAAQAEAAEAAAAdABwAAQAEAAEAAAAeABwAAQAEAAEAAAAfABwAAQAEAAEAAAAgABwAAQAEAAEAAAAhABwAAQAEAAEAAAAiAAQAAQAEAAEAAGAiAAUAAQAEAAEAAGAiAAYAAQAEAAEAAGAiAAcAAQAEAAEAAGAiAAgAAQAEAAEAAGAiAAkAAQAEAAEAAGAiAAoAAQAEAAEAAGAiAAsAAQAEAAEAAGAiAAwAAQAEAAEAAGAiAA0AAQAEAAEAAGAiAA4AAQAEAAEAAGAiAA8AAQAEAAEAAGAiABAAAQAEAAEAAGAiABEAAQAEAAEAAGAiABQAAQAEAAEAAGAiABUAAQAEAAEAAGAiABYAAQAEAAEAAGAiABcAAQAEAAEAAGAiABgAAQAEAAEAAGAiABkAAQAEAAEAAGAiABoAAQAEAAEAAGAiABsAAQAEAAEAAGAiABwAAQADAAEAADAHAAEAAQADAAEAAAAIAAEAAQAEAAEAAAAJAAEAAQAEAAEAAAAKAAEAAQAEAAEAAAALAAEAAQAEAAEAAAAMAAEAAQAEAAEAAAANAAEAAQAEAAEAAAAOAAEAAQAEAAEAAAAPAAEAAQAEAAEAAAAQAAEAAQAEAAEAAAARAAEAAQAEAAEAAAASAAEAAQAEAAEAAAATAAEAAQAEAAEAAAAUAAEAAQAEAAEAAAAVAAEAAQAEAAEAAAAWAAEAAQAEAAEAAAAXAAEAAQAEAAEAAAAYAAEAAQAEAAEAAAAZAAEAAQAEAAEAAAAaAAEAAQAEAAEAAAAbAAEAAQAEAAEAAAAcAAEAAQAEAAEAAAAdAAEAAQAEAAEAAAAeAAEAAQAEAAEAAAAfAAEAAQAEAAEAAAAgAAEAAQAEAAEAAAAiAAIAAQAEAAEAAGAiAAEAAQADAAEAAFAhAAEAAQAEAAEAAAA=")
tile_set = SubResource("TileSet_x42e6")
script = ExtResource("4_icy5c")

[node name="Player1" parent="." instance=ExtResource("5_rmjfq")]
z_index = 5
position = Vector2(88, 168)
spawn_position = Vector2(136, 224)

[node name="Player2" parent="." instance=ExtResource("5_rmjfq")]
z_index = 5
position = Vector2(200, 264)
player_id = 2
spawn_position = Vector2(200, 224)

[node name="Player3" parent="." instance=ExtResource("5_rmjfq")]
z_index = 5
position = Vector2(104, 264)
player_id = 3
spawn_position = Vector2(104, 224)

[node name="Player4" parent="." instance=ExtResource("5_rmjfq")]
z_index = 5
position = Vector2(232, 264)
player_id = 4
spawn_position = Vector2(232, 224)

[node name="Player Base" parent="." instance=ExtResource("6_ouxo3")]
visible = false
position = Vector2(168, 224)

[node name="Bonus 1" parent="." instance=ExtResource("6_7pb6i")]
z_index = 15
position = Vector2(168, 112)
collision_mask = 3096
bonus_id = 1
area_x_min = 88.0
area_x_max = 248.0
area_y_min = 32.0
area_y_max = 200.0

[node name="Bonus 2" parent="." instance=ExtResource("6_7pb6i")]
z_index = 15
position = Vector2(168, 144)
collision_mask = 3096
bonus_id = 2
area_x_min = 88.0
area_x_max = 248.0
area_y_min = 32.0
area_y_max = 200.0

[node name="Bots" type="Node2D" parent="."]

[node name="LevelArea" type="Area2D" parent="." groups=["Level"]]
visible = false
position = Vector2(0, 8)
collision_layer = 512
collision_mask = 56
input_pickable = false

[node name="AreaCollision" type="CollisionPolygon2D" parent="LevelArea"]
position = Vector2(168, 120)
polygon = PackedVector2Array(184, -184, -184, -184, -184, 184, -112, 112, -112, -112, 112, -112, 112, 112, -112, 112, -184, 184, 184, 184)

[node name="GameOverMessages" type="Node2D" parent="."]
z_index = 1000
position = Vector2(0, 8)

[node name="GameoverOverlayer" type="ColorRect" parent="GameOverMessages"]
self_modulate = Color(1, 1, 1, 0)
offset_top = -8.0
offset_right = 336.0
offset_bottom = 248.0
color = Color(0, 0, 0, 0.5882353)

[node name="GameOver" type="Sprite2D" parent="GameOverMessages"]
visible = false
z_index = 500
position = Vector2(168, 256)
texture = ExtResource("8_ouxo3")

[node name="GameOverP1" type="Sprite2D" parent="GameOverMessages"]
visible = false
z_index = 500
position = Vector2(136, 256)
texture = ExtResource("8_ouxo3")

[node name="GameOverP2" type="Sprite2D" parent="GameOverMessages"]
visible = false
z_index = 500
position = Vector2(200, 256)
texture = ExtResource("8_ouxo3")

[node name="GameOverP3" type="Sprite2D" parent="GameOverMessages"]
visible = false
z_index = 500
position = Vector2(104, 256)
texture = ExtResource("8_ouxo3")

[node name="GameOverP4" type="Sprite2D" parent="GameOverMessages"]
visible = false
z_index = 500
position = Vector2(232, 256)
texture = ExtResource("8_ouxo3")

[node name="AnimPlayerGeral" type="AnimationPlayer" parent="GameOverMessages"]
root_node = NodePath("../GameOver")
libraries = {
&"": SubResource("AnimationLibrary_rmjfq")
}

[node name="AnimPlayerP1" type="AnimationPlayer" parent="GameOverMessages"]
libraries = {
&"": SubResource("AnimationLibrary_qogh7")
}

[node name="AnimPlayerP2" type="AnimationPlayer" parent="GameOverMessages"]
libraries = {
&"": SubResource("AnimationLibrary_5mi6g")
}

[node name="AnimPlayerP3" type="AnimationPlayer" parent="GameOverMessages"]
libraries = {
&"": SubResource("AnimationLibrary_jyre1")
}

[node name="AnimPlayerP4" type="AnimationPlayer" parent="GameOverMessages"]
libraries = {
&"": SubResource("AnimationLibrary_p62il")
}

[node name="GameOverTimerP1" type="Timer" parent="GameOverMessages"]
wait_time = 5.0
one_shot = true

[node name="GameOverTimerP2" type="Timer" parent="GameOverMessages"]
wait_time = 5.0
one_shot = true

[node name="GameOverTimerP3" type="Timer" parent="GameOverMessages"]
wait_time = 5.0
one_shot = true

[node name="GameOverTimerP4" type="Timer" parent="GameOverMessages"]
wait_time = 5.0
one_shot = true

[node name="PauseMenu" parent="." instance=ExtResource("9_icy5c")]
visible = false

[node name="Results Screen" parent="." instance=ExtResource("10_rmjfq")]
visible = false

[node name="ProtectionTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]

[node name="FinishTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FreezeTimer" type="Timer" parent="."]
one_shot = true

[node name="FlickinTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="LevelArea" to="." method="_on_level_area_entered"]
[connection signal="body_entered" from="LevelArea" to="." method="_on_level_body_entered"]
[connection signal="timeout" from="GameOverMessages/GameOverTimerP1" to="." method="_on_game_over_p1_timeout"]
[connection signal="timeout" from="GameOverMessages/GameOverTimerP2" to="." method="_on_game_over_p2_timeout"]
[connection signal="timeout" from="GameOverMessages/GameOverTimerP3" to="." method="_on_game_over_p3_timeout"]
[connection signal="timeout" from="GameOverMessages/GameOverTimerP4" to="." method="_on_game_over_p4_timeout"]
[connection signal="timeout" from="ProtectionTimer" to="." method="on_protection_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timeout"]
[connection signal="timeout" from="FinishTimer" to="." method="_on_finish_level_timeout"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_freeze_timeout"]
[connection signal="timeout" from="FlickinTimer" to="." method="_on_flickin_timeout"]
